feat: add create docs
