# handler/response.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/luizhirasawa/Go-api.git/schemas"
 )
 
 func sendError(ctx *gin.Context, code int, msg string) {
@@ -22,4 +23,14 @@ func sendSuccess(ctx *gin.Context, op string, data any) {
 		"operation": fmt.Sprintf("operation from handler: %s successful", op),
 		"data":      data,
 	})
+}
+
+type ErrorResponse struct {
+	Message   string `json:"message"`
+	ErrorCode string `json:"error"`
+}
+
+type CreateOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
 }
